5.7/developer-support/release-notes/overview.mdx
---
title: "Latest Tyk Releases"
'og:description': "Explore Tyk's latest releases. Here you will find latest releases and access to docker images and release notes for all our platforms."
---

export const releaseData = {
  "licensed": [
    {
      "home": "tyk-dashboard",
      "name": "Tyk Dashboard",
      "licensed": true,
      "latest": "5.7.2",
      "releaseNotesPath": "developer-support/release-notes/dashboard",
      "lts": "5.3.10",
      "latestData": {
        "name": "5.7.2",
        "date": "19/02/2025",
        "docker": "https://hub.docker.com/r/tykio/tyk-dashboard/tags?page=1&name=v5.7.2"
      }
    },
    {
      "home": "tyk-operator",
      "name": "Tyk Operator",
      "licensed": true,
      "latest": "1.1.0",
      "releaseNotesPath": "product-stack/tyk-operator/release-notes/operator-1.1",
      "latestData": {
        "name": "1.1.0",
        "date": "9/12/2024",
        "docker": "https://hub.docker.com/r/tykio/tyk-operator/tags?page=1&name=1.1.0"
      }
    },
    {
      "home": "tyk-sync",
      "name": "Tyk Sync",
      "licensed": true,
      "latest": "2.0.4",
      "releaseNotesPath": "product-stack/tyk-sync/release-notes/sync-2.0",
      "latestData": {
        "name": "2.0.4",
        "date": "14/12/2024",
        "docker": "https://hub.docker.com/r/tykio/tyk-sync/tags?page=1&name=v2.0.4"
      }
    },
    {
      "home": "tyk-multi-data-centre",
      "name": "Tyk MDCB",
      "licensed": true,
      "latest": "2.7.2",
      "releaseNotesPath": "product-stack/tyk-enterprise-mdcb/release-notes/version-2.7",
      "latestData": {
        "name": "2.7.2",
        "date": "03/12/2024",
        "docker": "https://hub.docker.com/r/tykio/tyk-mdcb-docker/tags?page=1&name=2.7.2"
      }
    },
    {
      "home": "tyk-developer-portal/tyk-enterprise-developer-portal",
      "name": "Tyk Enterprise Developer Portal",
      "licensed": true,
      "latest": "1.13.0",
      "releaseNotesPath": "developer-support/release-notes/portal",
      "latestData": {
        "name": "1.13.0",
        "date": "06/11/2024",
        "docker": "https://hub.docker.com/r/tykio/portal/tags?page=1&name=1.13.0"
      }
    }
  ],
  "opensource": [
    {
      "home": "tyk-oss-gateway",
      "name": "Tyk Gateway",
      "licensed": false,
      "latest": "5.7.2",
      "releaseNotesPath": "developer-support/release-notes/gateway",
      "lts": "5.3.10",
      "latestData": {
        "name": "5.7.2",
        "date": "19/02/2025",
        "docker": "https://hub.docker.com/r/tykio/tyk-gateway/tags?page=1&name=v5.7.2",
        "tag": "https://github.com/TykTechnologies/tyk/releases/tag/v5.7.2"
      }
    },
    {
      "home": "tyk-pump",
      "name": "Tyk Pump",
      "licensed": false,
      "latest": "1.11.2",
      "releaseNotesPath": "developer-support/release-notes/pump",
      "latestData": {
        "name": "1.11.2",
        "date": "10/01/2025",
        "docker": "https://hub.docker.com/r/tykio/tyk-pump-docker-pub/tags?page=1&name=v1.11.2",
        "tag": "https://github.com/TykTechnologies/tyk-pump/releases/tag/v1.11.2"
      }
    },
    {
      "home": "tyk-identity-broker",
      "name": "Tyk Identity Broker",
      "licensed": false,
      "latest": "1.6.1",
      "releaseNotesPath": "developer-support/release-notes/tib#16-release-notes",
      "latestData": {
        "name": "1.6.1",
        "date": "5/11/2024",
        "docker": "https://hub.docker.com/r/tykio/tyk-identity-broker/tags?page=1&name=1.6.1",
        "tag": "https://github.com/TykTechnologies/tyk-identity-broker/releases/tag/v1.6.1"
      }
    },
    {
      "home": "deployment-and-operations/tyk-self-managed/deployment-lifecycle/installations/kubernetes/tyk-helm-tyk-stack",
      "name": "Tyk Helm Charts",
      "licensed": false,
      "latest": "2.2.0",
      "releaseNotesPath": "product-stack/tyk-charts/release-notes/version-2.2",
      "latestData": {
        "name": "2.2.0",
        "date": "9/12/2024",
        "docker": "",
        "tag": "https://github.com/TykTechnologies/tyk-charts/releases/tag/v2.2.0"
      }
    }
  ]
};

import { ResponsiveGrid } from '/snippets/5.7/ResponsiveGrid.mdx';
import { ReleaseSummaryComponent } from '/snippets/5.7/ReleaseSummaryComponent.mdx';

View the release notes for both our licensed and open source components. The notes contain detailed insights about features, enhancements and bug fixes, and are a vital resource for developers evaluating upgrades.

Please consult our [LTS policy](/5.7/developer-support/release-types/long-term-support) for information and guidelines relating to Long Term Support releases.

<ReleaseSummaryComponent releaseData={releaseData} />
