5.14/developer-support/release-notes/overview.mdx
---
title: "Latest Tyk Releases"
description: "Explore Tyk's latest releases. Here you will find latest releases and access to docker images and release notes for all our platforms."
canonical: "https://tyk.io/docs/developer-support/release-notes/overview"
---

export const releaseData = {
  "licensed": [
    {
      "home": "tyk-dashboard",
      "name": "Tyk Dashboard",
      "licensed": true,
      "latest": "5.14.0",
      "releaseNotesPath": "developer-support/release-notes/dashboard",
      "lts": "5.13.2",
      "latestData": {
        "name": "5.14.0",
        "date": "07/07/2026",
        "docker": "https://hub.docker.com/r/tykio/tyk-dashboard/tags?page=1&name=v5.14.0"
      }
    },
    {
      "home": "tyk-stack/tyk-operator/installing-tyk-operator",
      "name": "Tyk Operator",
      "licensed": true,
      "latest": "1.4.2",
      "releaseNotesPath": "developer-support/release-notes/operator",
      "latestData": {
        "name": "1.4.2",
        "date": "21/05/2026",
        "docker": "https://hub.docker.com/r/tykio/tyk-operator/tags?page=1&name=1.4.2"
      }
    },
    {
      "home": "product-stack/tyk-sync/installing-tyk-sync",
      "name": "Tyk Sync",
      "licensed": true,
      "latest": "2.2.0",
      "releaseNotesPath": "developer-support/release-notes/sync",
      "latestData": {
        "name": "2.2.0",
        "date": "21/05/2026",
        "docker": "https://hub.docker.com/r/tykio/tyk-sync/tags?page=1&name=v2.2.0"
      }
    },
    {
      "home": "tyk-multi-data-centre",
      "name": "Tyk MDCB",
      "licensed": true,
      "latest": "2.12.0",
      "releaseNotesPath": "developer-support/release-notes/mdcb",
      "latestData": {
        "name": "2.12.0",
        "date": "19/05/2026",
        "docker": "https://hub.docker.com/r/tykio/tyk-mdcb-docker/tags?page=1&name=v2.12.0"
      }
    },
    {
      "home": "tyk-developer-portal/tyk-enterprise-developer-portal",
      "name": "Tyk Enterprise Developer Portal",
      "licensed": true,
      "latest": "1.18.0",
      "releaseNotesPath": "developer-support/release-notes/portal",
      "latestData": {
        "name": "1.18.0",
        "date": "4/06/2026",
        "docker": "https://hub.docker.com/r/tykio/portal/tags?page=1&name=1.18.0"
      }
    }
  ],
  "opensource": [
    {
      "home": "tyk-oss-gateway",
      "name": "Tyk Gateway",
      "licensed": false,
      "latest": "5.14.0",
      "releaseNotesPath": "developer-support/release-notes/gateway",
      "lts": "5.13.2",
      "latestData": {
        "name": "5.14.0",
        "date": "07/07/2026",
        "docker": "https://hub.docker.com/r/tykio/tyk-gateway/tags?page=1&name=v5.14.0",
        "tag": "https://github.com/TykTechnologies/tyk/releases/tag/v5.14.0"
      }
    },
    {
      "home": "tyk-pump",
      "name": "Tyk Pump",
      "licensed": false,
      "latest": "1.16.0",
      "releaseNotesPath": "developer-support/release-notes/pump",
      "latestData": {
        "name": "1.16.0",
        "date": "19/05/2026",
        "docker": "https://hub.docker.com/r/tykio/tyk-pump-docker-pub/tags?page=1&name=v1.16.0",
        "tag": "https://github.com/TykTechnologies/tyk-pump/releases/tag/v1.16.0"
      }
    },
    {
      "home": "tyk-identity-broker",
      "name": "Tyk Identity Broker",
      "licensed": false,
      "latest": "1.8.0",
      "releaseNotesPath": "developer-support/release-notes/tib",
      "latestData": {
        "name": "1.8.0",
        "date": "23/06/2026",
        "docker": "https://hub.docker.com/r/tykio/tyk-identity-broker/tags?page=1&name=1.8.0",
        "tag": "https://github.com/TykTechnologies/tyk-identity-broker/releases/tag/v1.8.0"
      }
    },
    {
      "home": "product-stack/tyk-charts/overview",
      "name": "Tyk Helm Charts",
      "licensed": false,
      "latest": "5.3.0",
      "releaseNotesPath": "developer-support/release-notes/helm-chart",
      "latestData": {
        "name": "5.3.0",
        "date": "21/05/2026",
        "docker": "",
        "tag": "https://github.com/TykTechnologies/tyk-charts/releases"
      }
    },
    {
      "home": "ai-management/ai-studio/overview",
      "name": "Tyk AI Studio",
      "licensed": false,
      "latest": "2.1.0",
      "releaseNotesPath": "developer-support/release-notes/ai-studio",
      "latestData": {
        "name": "2.1.0",
        "date": "14/05/2026",
        "docker": "https://hub.docker.com/r/tykio/tyk-ai-studio/tags?page=1&name=v2.1.0",
        "tag": "https://github.com/TykTechnologies/ai-studio/releases/tag/v2.1.0"
      }
    }
  ]
};

import { ResponsiveGrid } from '/snippets/5.14/ResponsiveGrid.mdx';
import { ReleaseSummaryComponent } from '/snippets/5.14/ReleaseSummaryComponent.mdx';

View the release notes for both our licensed and open source components. The notes contain detailed insights about features, enhancements and bug fixes, and are a vital resource for developers evaluating upgrades.

Please consult our [LTS policy](/5.14/developer-support/release-types/long-term-support) for information and guidelines relating to Long Term Support releases.

<ReleaseSummaryComponent releaseData={releaseData} />
